tests/spec/parse/snapshots/struct_empty.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  struct Empty {}
---
[
    Struct {
        doc: None,
        attributes: [],
        name: "Empty",
        name_span: Span {
            file_id: 0,
            byte_offset: 8,
            byte_length: 5,
        },
        generics: [],
        fields: Record(
            [],
        ),
        visibility: Private,
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 15,
        },
    },
]
