tests/spec/parse/snapshots/struct_field_name_position_mut_error.snap
---
source: tests/spec/parse/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:1:12]
 1 │ struct S { mut items: Slice<int> }
   ·            ─┬─
   ·             ╰── `mut` goes on the field's type
   ╰────
  help: Write the permission in the type, as in `items: mut Slice<int>` · code: [parse.syntax_error]
