tests/spec/parse/snapshots/struct_field_with_json_attribute.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  #[json]
  struct User {
    #[json(omitempty)]
    name: string,
  }
---
[
    Struct {
        doc: None,
        attributes: [
            Attribute {
                name: "json",
                args: [],
                span: Span {
                    file_id: 0,
                    byte_offset: 1,
                    byte_length: 7,
                },
            },
        ],
        name: "User",
        name_span: Span {
            file_id: 0,
            byte_offset: 16,
            byte_length: 4,
        },
        generics: [],
        fields: Record(
            [
                StructFieldDefinition {
                    doc: None,
                    name: "name",
                    name_span: Span {
                        file_id: 0,
                        byte_offset: 46,
                        byte_length: 4,
                    },
                    annotation: Constructor {
                        name: "string",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 52,
                            byte_length: 6,
                        },
                    },
                    visibility: Private,
                    ty: Var {
                        id: uninferred,
                    },
                    kind: Named {
                        attributes: [
                            Attribute {
                                name: "json",
                                args: [
                                    Flag(
                                        "omitempty",
                                    ),
                                ],
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 25,
                                    byte_length: 18,
                                },
                            },
                        ],
                    },
                },
            ],
        ),
        visibility: Private,
        span: Span {
            file_id: 0,
            byte_offset: 9,
            byte_length: 52,
        },
    },
]
