tests/spec/parse/snapshots/struct_in_match_subject.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  struct Point { x: int }
  fn test() -> int {
    let x = 42;
    match Point { x } {
      Point { x: val } => val,
    }
  }
---
[
    Struct {
        doc: None,
        attributes: [],
        name: "Point",
        name_span: Span {
            file_id: 0,
            byte_offset: 8,
            byte_length: 5,
        },
        generics: [],
        fields: Record(
            [
                StructFieldDefinition {
                    doc: None,
                    name: "x",
                    name_span: Span {
                        file_id: 0,
                        byte_offset: 16,
                        byte_length: 1,
                    },
                    annotation: Constructor {
                        name: "int",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 19,
                            byte_length: 3,
                        },
                    },
                    visibility: Private,
                    ty: Var {
                        id: uninferred,
                    },
                    kind: Named {
                        attributes: [],
                    },
                },
            ],
        ),
        visibility: Private,
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 23,
        },
    },
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 28,
            byte_length: 4,
        },
        generics: [],
        params: [],
        return_annotation: Constructor {
            name: "int",
            params: [],
            span: Span {
                file_id: 0,
                byte_offset: 38,
                byte_length: 3,
            },
        },
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Let {
                        binding: Binding {
                            pattern: Identifier {
                                identifier: "x",
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 50,
                                    byte_length: 1,
                                },
                                binding: None,
                            },
                            annotation: None,
                            ty: Var {
                                id: uninferred,
                            },
                        },
                        value: Literal {
                            literal: Integer {
                                value: 42,
                                text: None,
                            },
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 54,
                                byte_length: 2,
                            },
                        },
                        mode: Plain,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 46,
                            byte_length: 10,
                        },
                    },
                    Match {
                        subject: StructCall {
                            name: "Point",
                            field_assignments: [
                                StructFieldAssignment {
                                    name: "x",
                                    name_span: Span {
                                        file_id: 0,
                                        byte_offset: 74,
                                        byte_length: 1,
                                    },
                                    value: Identifier {
                                        value: "x",
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 74,
                                            byte_length: 1,
                                        },
                                        resolution: Unresolved,
                                    },
                                },
                            ],
                            spread: None,
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 66,
                                byte_length: 11,
                            },
                        },
                        arms: [
                            MatchArm {
                                pattern: Struct {
                                    identifier: "Point",
                                    fields: [
                                        StructFieldPattern {
                                            name: "x",
                                            value: Identifier {
                                                identifier: "val",
                                                span: Span {
                                                    file_id: 0,
                                                    byte_offset: 95,
                                                    byte_length: 3,
                                                },
                                                binding: None,
                                            },
                                        },
                                    ],
                                    rest: false,
                                    resolution: Unresolved,
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 84,
                                        byte_length: 16,
                                    },
                                },
                                expression: Identifier {
                                    value: "val",
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 104,
                                        byte_length: 3,
                                    },
                                    resolution: Unresolved,
                                },
                            },
                        ],
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 60,
                            byte_length: 52,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 42,
                    byte_length: 72,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 25,
            byte_length: 89,
        },
    },
]
