tests/spec/parse/snapshots/struct_init_operand.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test() { let result = Point { x: 1, y: 2 }.distance(); }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Let {
                        binding: Binding {
                            pattern: Identifier {
                                identifier: "result",
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 17,
                                    byte_length: 6,
                                },
                                binding: None,
                            },
                            annotation: None,
                            ty: Var {
                                id: uninferred,
                            },
                        },
                        value: Call {
                            expression: DotAccess {
                                expression: StructCall {
                                    name: "Point",
                                    field_assignments: [
                                        StructFieldAssignment {
                                            name: "x",
                                            name_span: Span {
                                                file_id: 0,
                                                byte_offset: 34,
                                                byte_length: 1,
                                            },
                                            value: Literal {
                                                literal: Integer {
                                                    value: 1,
                                                    text: None,
                                                },
                                                ty: Var {
                                                    id: uninferred,
                                                },
                                                span: Span {
                                                    file_id: 0,
                                                    byte_offset: 37,
                                                    byte_length: 1,
                                                },
                                            },
                                        },
                                        StructFieldAssignment {
                                            name: "y",
                                            name_span: Span {
                                                file_id: 0,
                                                byte_offset: 40,
                                                byte_length: 1,
                                            },
                                            value: Literal {
                                                literal: Integer {
                                                    value: 2,
                                                    text: None,
                                                },
                                                ty: Var {
                                                    id: uninferred,
                                                },
                                                span: Span {
                                                    file_id: 0,
                                                    byte_offset: 43,
                                                    byte_length: 1,
                                                },
                                            },
                                        },
                                    ],
                                    spread: None,
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 26,
                                        byte_length: 20,
                                    },
                                },
                                member: "distance",
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 26,
                                    byte_length: 29,
                                },
                                resolution: Unresolved,
                            },
                            args: [],
                            spread: None,
                            type_arguments: None,
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 26,
                                byte_length: 31,
                            },
                            call_kind: Unresolved,
                        },
                        mode: Plain,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 13,
                            byte_length: 44,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 11,
                    byte_length: 49,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 59,
        },
    },
]
