tests/spec/parse/snapshots/struct_literal_as_arg.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test(x_val: int) {
    process(Point { x: x_val, y: 0 });
  }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [
            Binding {
                pattern: Identifier {
                    identifier: "x_val",
                    span: Span {
                        file_id: 0,
                        byte_offset: 9,
                        byte_length: 5,
                    },
                    binding: None,
                },
                annotation: Some(
                    Constructor {
                        name: "int",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 16,
                            byte_length: 3,
                        },
                    },
                ),
                ty: Var {
                    id: uninferred,
                },
            },
        ],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Call {
                        expression: Identifier {
                            value: "process",
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 25,
                                byte_length: 7,
                            },
                            resolution: Unresolved,
                        },
                        args: [
                            StructCall {
                                name: "Point",
                                field_assignments: [
                                    StructFieldAssignment {
                                        name: "x",
                                        name_span: Span {
                                            file_id: 0,
                                            byte_offset: 41,
                                            byte_length: 1,
                                        },
                                        value: Identifier {
                                            value: "x_val",
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 44,
                                                byte_length: 5,
                                            },
                                            resolution: Unresolved,
                                        },
                                    },
                                    StructFieldAssignment {
                                        name: "y",
                                        name_span: Span {
                                            file_id: 0,
                                            byte_offset: 51,
                                            byte_length: 1,
                                        },
                                        value: Literal {
                                            literal: Integer {
                                                value: 0,
                                                text: None,
                                            },
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 54,
                                                byte_length: 1,
                                            },
                                        },
                                    },
                                ],
                                spread: None,
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 33,
                                    byte_length: 24,
                                },
                            },
                        ],
                        spread: None,
                        type_arguments: None,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 25,
                            byte_length: 33,
                        },
                        call_kind: Unresolved,
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 21,
                    byte_length: 40,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 60,
        },
    },
]
